--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,38 @@
 /* You can add global styles to this file, and also import other style files */
 
 h1 {
-    color: darkslateblue;
+  color: darkslateblue;
+}
+
+#main__nav {
+  width: 250px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  position: fixed;
+  overflow: auto;
+  background-color: white;
+  z-index: 5;
+  height: 100%;
+}
+
+.main__logo {
+  margin: 30px 20px;
+}
+
+.main_links {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.main_links li {
+  padding: 5px;
+  background: #d5e812;
+  font-weight: bold;
+  border-radius: 3px;
+  margin: 5px;
+}
+
+.main_links li:hover {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 2px 10px 0 rgba(0, 0, 0, 0.22);
+    cursor: pointer;
 }
