--- a/src/app/datalist/datalist.component.html
+++ b/src/app/datalist/datalist.component.html
@@ -45,7 +45,7 @@
           <button class="btn btn-info btn-sm" [routerLink]="['update', i]">Update</button>
         </td>
         <td>
-          <button class="btn btn-warning btn-sm">Delete</button>
+          <button class="btn btn-warning btn-sm" (click)="deleteData(res, i)">Delete</button>
         </td>
       </tr>
     </tbody>
